# f411-freertos-usb

./: .clang-format  .gitignore  .mxproject  Makefile  README.md  STM32-for-VSCode.config.yaml  STM32Make.make  cross_file.txt  f411-freertos-usb.ioc  meson.build  openocd.cfg  print_size.py
App/Inc/: app.h  circ_buffer.h
App/Src/: app.c  circ_buffer.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: freertos.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
